# telemt-proxy-manager

./: .env.example  .gitignore  API_SPEC.md  API_SPEC_RU.md  Makefile  README.md  README_RU.md  alembic.ini  config.py  configure_telemt.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  setup.sh  telemt-manager.service
alembic/: env.py
alembic/versions/: 345ea966dca0_initial_migration.py
api/: keys.py
redis_data/: dump.rdb
services/: scheduler.py  telemt_client.py
